--- a/shopapp.webui/Views/Shared/_navbar.cshtml
+++ b/shopapp.webui/Views/Shared/_navbar.cshtml
@@ -5,18 +5,46 @@
                 <li class="nav-item">
                     <a href="/products" class="nav-link">Products</a>
                 </li>
-                 <li class="nav-item">
-                    <a href="" class="nav-link">Cart</a>
-                </li>
-                  <li class="nav-item">
-                    <a href="" class="nav-link">Orders</a>
-                </li>                           
-                <li class="nav-item">
-                    <a href="/admin/products" class="nav-link">Admin Products</a>
-                </li>
-                 <li class="nav-item">
-                    <a href="/admin/categories" class="nav-link">Admin Categories</a>
-                </li>
+                 @if(User.Identity.IsAuthenticated){
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Cart</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Orders</a>
+                    </li>                      
+                    <li class="nav-item">
+                        <a href="/admin/products" class="nav-link">Admin Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/admin/categories" class="nav-link">Admin Categories</a>
+                    </li>
+                 }      
             </ul>
+
+
+            <ul class="navbar-nav ml-auto">
+
+
+                @if(User.Identity.IsAuthenticated){
+                    <li class="nav-item">
+                        <a href="/account/manage" class="nav-link">@User.Identity.Name</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/account/logout" class="nav-link">Logout</a>
+                    </li>
+                }
+                else{
+                    <li class="nav-item">
+                        <a href="/account/login" class="nav-link">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/account/register" class="nav-link">Register</a>
+                    </li>
+                }
+                
+                
+            </ul>
+
+
         </div>
     </div>
