--- a/shopapp.webui/Views/Account/Login.cshtml
+++ b/shopapp.webui/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-8">
         <form asp-controller="Account" asp-action="Login" method="POST">
-            <input type="hidden" name="RteurnUrl" value="@Model.ReturnUrl">
+            <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl">
         <div asp-validation-summary="All" class="text-danger"></div>
        <div class="form-group row">
             <label asp-for="UserName" class="col-sm-2 col-form-label"></label>
