--- a/shopapp.webui/Views/_ViewImports.cshtml
+++ b/shopapp.webui/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using shopapp.entity
 @using shopapp.webui.Models
+@using Microsoft.AspNetCore.Identity
