--- a/shopapp.webui/Views/Shared/_navbar.cshtml
+++ b/shopapp.webui/Views/Shared/_navbar.cshtml
@@ -12,12 +12,21 @@
                     <li class="nav-item">
                         <a href="" class="nav-link">Orders</a>
                     </li>                      
-                    <li class="nav-item">
-                        <a href="/admin/products" class="nav-link">Admin Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/admin/categories" class="nav-link">Admin Categories</a>
-                    </li>
+                    if(User.IsInRole("Admin")){
+                        <li class="nav-item">
+                            <a href="/admin/products" class="nav-link">Admin Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/admin/categories" class="nav-link">Admin Categories</a>
+                        </li>
+                        <li>
+                            <a href="/admin/role/list" class="nav-link">Roles</a>
+                        </li>
+                        <li>
+                            <a href="/admin/user/list" class="nav-link">Users</a>
+                        </li>
+                    }
+                    
                  }      
             </ul>
 
