--- a/shopapp.webui/Views/Shared/_Layout.cshtml
+++ b/shopapp.webui/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/modules/bootstrap/dist/css/bootstrap.min.css" crossorigin="anonymous">
     @RenderSection("Css", required: false)
     <link rel="stylesheet" href="~/css/style.css">
-    <title>Shopapp</title>
+    <title>PlannerApp</title>
 </head>
 <body>
 
@@ -33,7 +33,7 @@
     </main>
 
     <footer class="py-5 bg-dark text-white text-center">
-        Shop App
+        Planner App
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>    
