--- a/shopapp.webui/Views/Shared/_product.cshtml
+++ b/shopapp.webui/Views/Shared/_product.cshtml
@@ -4,12 +4,21 @@
     <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
-        <small class="text-muted">
-            <i class="fas fa-lira-sign"></i>@Model.Price
-        </small>
+        <p class="card-text">@Model.Year</p>
     </div>
     <div class="card-footer text-center">
         <a asp-controller="shop" asp-action="Details" asp-route-url="@Model.Url" class="btn btn-primary btn-sm">Details</a>
-        <a asp-controller="shop" asp-action="addtocart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Add to Cart</a>
+
+        @if (User.Identity.IsAuthenticated)
+        {
+            <form asp-controller="List" asp-action="AddToList" style="display: inline;">
+                <input type="hidden" name="productId" value="@Model.ProductId" />
+                <button type="submit" value="Add to List" class="btn btn-primary btn-sm">Add to List</button>
+            </form>
+        }
+        
+
+
+
     </div>
 </div>   
