--- a/shopapp.webui/Views/Admin/ProductEdit.cshtml
+++ b/shopapp.webui/Views/Admin/ProductEdit.cshtml
@@ -35,10 +35,10 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label  asp-for="Price" class="col-sm-2 col-form-label"></label>
+                <label  asp-for="Year" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <input class="form-control" asp-for="Price">
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <input class="form-control" asp-for="Year">
+                    <span asp-validation-for="Year" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
