--- a/shopapp.webui/Views/Admin/ProductList.cshtml
+++ b/shopapp.webui/Views/Admin/ProductList.cshtml
@@ -11,9 +11,7 @@
                     <td style="width: 30px;">Id</td>
                     <td style="width: 100px;">Image</td>
                     <td>Name</td>
-                    <td style="width: 20px;">Price</td>
-                    <td style="width: 20px;">Anasayfa</td>
-                    <td style="width: 20px;">Onaylı</td>
+                    <td style="width: 20px;">Year</td>
                     <td style="width: 150px;"></td>
                 </tr>
             </thead>
@@ -26,23 +24,6 @@
                                 <td>@item.ProductId</td>
                                 <td><img src="~/img/@item.ImageUrl" width="80"></td>
                                 <td>@item.Name</td>
-                                <td>@item.Price</td>
-                                <td>
-                                    @if(item.IsHome)
-                                    {
-                                        <i class="fas fa-check-circle"></i>
-                                    }else{
-                                        <i class="fas fa-times-circle"></i>
-                                    }
-                                </td>
-                                <td>
-                                    @if(item.IsApproved)
-                                    {
-                                        <i class="fas fa-check-circle"></i>
-                                    }else{
-                                        <i class="fas fa-times-circle"></i>
-                                    }
-                                </td>
                                 <td>
                                     <a href="/admin/products/@item.ProductId" class="btn btn-primary btn-sm mr-2">Edit</a>
                                     
