--- a/shopapp.webui/Views/Shared/_navbar.cshtml
+++ b/shopapp.webui/Views/Shared/_navbar.cshtml
@@ -1,17 +1,14 @@
   <div class="navbar bg-danger navbar-dark navbar-expand-sm">
         <div class="container">
-            <a href="/" class="navbar-brand">Shopapp</a>
+            <a href="/" class="navbar-brand">Planner App</a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a href="/products" class="nav-link">Products</a>
                 </li>
                  @if(User.Identity.IsAuthenticated){
                     <li class="nav-item">
-                        <a href="" class="nav-link">Cart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="" class="nav-link">Orders</a>
-                    </li>                      
+                        <a href="/list" class="nav-link">My List</a>
+                    </li>                   
                     if(User.IsInRole("Admin")){
                         <li class="nav-item">
                             <a href="/admin/products" class="nav-link">Admin Products</a>
