--- a/shopapp.webui/Views/Shop/Details.cshtml
+++ b/shopapp.webui/Views/Shop/Details.cshtml
@@ -13,10 +13,8 @@
             }                          
             
             <div class="mb-3">
-                <h4 class="text-primary mb-3">
-                    <i class="fas fa-lira-sign"></i>@Model.Product.Price
-                </h4>
-                <button type="submit" class="btn btn-primary btn-lg">Add To Cart</button>
+
+                <button type="submit" class="btn btn-primary btn-lg">Add To List</button>
             </h6>
     </div>
 </div>
